--- a/src/shared.less
+++ b/src/shared.less
@@ -16,6 +16,9 @@
 @concept-0-grad-light: #fff;
 @concept-0-grad-dark: #e6e6e6;
 @concept-0-group-bg: #e6e6e6;
+@subconcept-0-group-bg: #aaa;
+@subconcept-0-grad-light: #e6e6e6;
+@subconcept-0-grad-dark: #aaa;
 
 @concept-1-outline: #E57429;
 @concept-1-grad-light: #fff;
@@ -49,6 +52,7 @@
 
 @concept-button-width: 30px;
 @concept-button-height: 28px;
+@concept-textarea-width: 200px;
 @concept-button-border-radius: 6px;
 
 @excluded-opacity: 0.15;
