--- a/src/components/Concept/Concept.css
+++ b/src/components/Concept/Concept.css
@@ -21,8 +21,11 @@
 .MentalMapper .Concept:focus .Concept__button--top {
   transform: translateY(-28px);
 }
-.MentalMapper .Concept:focus .Concept__button--bottom {
-  transform: translateY(28px);
+.MentalMapper .Concept:focus .Concept__button--left {
+  transform: translateX(-30px);
+}
+.MentalMapper .Concept:focus .Concept__button--right {
+  transform: translateX(30px);
 }
 .MentalMapper .Concept:hover {
   z-index: 3;
@@ -31,8 +34,11 @@
 .MentalMapper .Concept:hover .Concept__button--top {
   transform: translateY(-28px);
 }
-.MentalMapper .Concept:hover .Concept__button--bottom {
-  transform: translateY(28px);
+.MentalMapper .Concept:hover .Concept__button--left {
+  transform: translateX(-30px);
+}
+.MentalMapper .Concept:hover .Concept__button--right {
+  transform: translateX(30px);
 }
 .MentalMapper .Concept__bg {
   position: absolute;
@@ -43,6 +49,9 @@
   border-radius: 6px;
   border: 1px solid #000;
   box-shadow: inset 0 0 0 2px #fff, 0 3px 8px rgba(0, 0, 0, 0.15);
+}
+.MentalMapper .Concept__bg--sub {
+  box-shadow: inset 0 0 0 2px #ccc, 0 3px 8px rgba(0, 0, 0, 0.15) !important;
 }
 .MentalMapper .Concept__bg--focused.Concept__bg--group-0 {
   box-shadow: inset 0 0 4px 2px #83A603;
@@ -122,6 +131,16 @@
   background: linear-gradient(to bottom, #fff 0%, #B2FFE5 100%);
   /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
 }
+.MentalMapper .Concept__bg--group-0-sub {
+  background: #aaa;
+  /* Old browsers */
+  background: -moz-linear-gradient(top, #aaa 0%, #e6e6e6 100%);
+  /* FF3.6-15 */
+  background: -webkit-linear-gradient(top, #aaa 0%, #e6e6e6 100%);
+  /* Chrome10-25,Safari5.1-6 */
+  background: linear-gradient(to bottom, #e6e6e6 0%, #aaa 100%);
+  /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+}
 .MentalMapper .Concept__button-wrapper {
   position: absolute;
   top: 0;
@@ -129,14 +148,18 @@
   bottom: 0;
   left: 0;
   display: flex;
-  justify-content: center;
+  justify-content: flex-start;
   z-index: -1;
 }
 .MentalMapper .Concept__button-wrapper--top {
   top: -14px;
+  left: 85px;
 }
-.MentalMapper .Concept__button-wrapper--bottom {
-  bottom: -14px;
+.MentalMapper .Concept__button-wrapper--left {
+  left: 0;
+}
+.MentalMapper .Concept__button-wrapper--right {
+  left: 170px;
 }
 .MentalMapper .Concept__button {
   color: #fff;
@@ -196,10 +219,15 @@
   top: 14px;
   border-radius: 6px 6px 0 0;
 }
-.MentalMapper .Concept__button--bottom {
-  align-self: flex-end;
-  bottom: 14px;
-  border-radius: 0 0 6px 6px;
+.MentalMapper .Concept__button--left {
+  align-self: flex-start;
+  top: 2px;
+  border-radius: 6px 0 0 6px;
+}
+.MentalMapper .Concept__button--right {
+  align-self: flex-start;
+  top: 2px;
+  border-radius: 0 6px 6px 0;
 }
 .MentalMapper .Concept__button:hover {
   background: #657F14;
@@ -211,6 +239,12 @@
   background: linear-gradient(to bottom, #A0CA24 0%, #A0CA24 15%, #657F14 85%, #657F14 100%);
   /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
   border-color: #657F14;
+}
+.MentalMapper .Concept__icon--add {
+  fill: #fff;
+  stroke: #fff;
+  height: 16px;
+  width: 16px;
 }
 .MentalMapper .Concept__icon--trash {
   fill: #fff;
@@ -225,7 +259,7 @@
   width: 16px;
 }
 .MentalMapper .Concept__textarea {
-  width: 168px;
+  width: 200px;
   line-height: 18px;
   font-size: 14px;
   min-height: 18px;
@@ -235,12 +269,16 @@
   position: relative;
   cursor: pointer;
   resize: none;
+  white-space: nowrap;
   z-index: 2;
   text-align: center;
   box-shadow: none !important;
 }
 .MentalMapper .Concept__textarea:focus {
   outline: none;
+}
+.MentalMapper .Concept__textarea--sub {
+  color: #e6e6e6 !important;
 }
 .MentalMapper .Concept--temp-relationship-exists:not(.Concept--is-temp-relationship) > * {
   pointer-events: none;
@@ -249,7 +287,8 @@
   z-index: 1;
 }
 .MentalMapper .Concept--temp-relationship-exists:not(.Concept--is-temp-relationship):hover .Concept__button--top,
-.MentalMapper .Concept--temp-relationship-exists:not(.Concept--is-temp-relationship):hover .Concept__button--bottom {
+.MentalMapper .Concept--temp-relationship-exists:not(.Concept--is-temp-relationship):hover .Concept__button--left,
+.MentalMapper .Concept--temp-relationship-exists:not(.Concept--is-temp-relationship):hover .Concept__button--right {
   transform: none;
 }
 .MentalMapper .Concept--temp-relationship-exists:not(.Concept--is-temp-relationship):hover > .Concept__bg--group-0 {
