--- a/src/components/Concept/Concept.less
+++ b/src/components/Concept/Concept.less
@@ -20,15 +20,6 @@
 
         &--focused {
             z-index: 3;
-            // transform: @concept-transform;
-            
-            // .Concept__button--top {
-            //     transform: translateY(0 - @concept-button-height);
-            // }
-        
-            // .Concept__button--bottom {
-            //     transform: translateY(@concept-button-height);
-            // }
         }
 
         &:focus {
@@ -40,8 +31,12 @@
                 transform: translateY(0 - @concept-button-height);
             }
 
-            .Concept__button--bottom {
-                transform: translateY(@concept-button-height);
+            .Concept__button--left {
+                transform: translateX(0 - @concept-button-width);
+            }
+
+            .Concept__button--right {
+                transform: translateX(@concept-button-width);
             }
         }
 
@@ -54,8 +49,12 @@
                 transform: translateY(0 - @concept-button-height);
             }
 
-            .Concept__button--bottom {
-                transform: translateY(@concept-button-height);
+            .Concept__button--left {
+                transform: translateX(0 - @concept-button-width);
+            }
+
+            .Concept__button--right {
+                transform: translateX(@concept-button-width);
             }
         }
 
@@ -68,6 +67,10 @@
             border-radius: 6px;
             border: 1px solid #000;
             box-shadow:inset 0 0 0 2px #fff, 0 3px 8px rgba(0, 0, 0, 0.15);
+
+            &--sub {
+                box-shadow: inset 0 0 0 2px #ccc, 0 3px 8px rgba(0, 0, 0, 0.15) !important;
+            }
 
             &--focused {
                 &.Concept__bg--group-0 { .mixin-selected-control-bg(@concept-0-outline); }
@@ -84,6 +87,8 @@
             &--group-3 { .mixin-concept-bg(@concept-3-grad-light, @concept-3-grad-dark); }
             &--group-4 { .mixin-concept-bg(@concept-4-grad-light, @concept-4-grad-dark); }
             &--group-5 { .mixin-concept-bg(@concept-5-grad-light, @concept-5-grad-dark); }
+
+            &--group-0-sub { .mixin-concept-bg(@subconcept-0-grad-light, @subconcept-0-grad-dark); }
         }
 
         &__button-wrapper {
@@ -94,30 +99,32 @@
             left: 0;
             // background-color: rgba(255, 0, 0, 0.3);
             display: flex;
-            justify-content: center;
+            justify-content: flex-start;
             z-index: -1;
             // pointer-events: none;
 
             &--top {
                 top: 0 - @concept-button-height / 2;
+                left: (@concept-textarea-width - @concept-button-width) / 2;
                 // background-color: rgba(255, 0, 0, 0.3);
             }
 
-            &--bottom {
-                bottom: 0 - @concept-button-height / 2;
+            &--left {
+                left: 0;
+            }
+
+            &--right {
+                left: @concept-textarea-width - @concept-button-width;
                 // background-color: rgba(0, 255, 0, 0.3);    
             }
         }
 
         &__button {
             .mm-button();
-            //.mixin-button-bg(@button-grad-light, @button-grad-dark);
-            // border: 1px solid @button-grad-dark;
             height: @concept-button-height;
             width: @concept-button-width;
             position: relative;
             transition: transform 300ms ease;
-            // border: 2px solid #000;
             cursor: pointer;
             z-index: 1;
             display: flex;
@@ -125,10 +132,6 @@
             align-items: center;
             outline: none;
 
-            &:focus {
-                // box-shadow: 0 0 1px 3px @button-grad-hover-light, inset 0 0 2px 1px @button-grad-hover-light;
-            }
-            
             > * {
                 pointer-events: none;
             }
@@ -137,19 +140,18 @@
                 align-self: flex-start;
                 top: @concept-button-height / 2; 
                 border-radius: @concept-button-border-radius @concept-button-border-radius 0 0;
-                
-                // &:focus {
-                //     transform: translateY(0 - @concept-button-height);
-                // }
             }
 
-            &--bottom {
-                align-self: flex-end;
-                bottom: @concept-button-height / 2;
-                border-radius: 0 0 @concept-button-border-radius @concept-button-border-radius;
-                // &:focus {
-                //     transform: translateY(@concept-button-height);
-                // }
+            &--left {
+                align-self: flex-start;
+                top: 2px;
+                border-radius: @concept-button-border-radius 0 0 @concept-button-border-radius;
+            }
+
+            &--right {
+                align-self: flex-start;
+                top: 2px;
+                border-radius: 0 @concept-button-border-radius @concept-button-border-radius 0;
             }
 
             &:hover {
@@ -158,12 +160,18 @@
             }
         }
 
+        &__icon--add {
+            fill: #fff;
+            stroke: #fff;
+            height: 16px;
+            width: 16px;
+        }
+
         &__icon--trash {
             fill: #fff;
             stroke: #fff;
             height: 16px;
             width: 16px;
-            //transform: scale(1.2);
         }
 
         &__icon--line {
@@ -171,12 +179,10 @@
             stroke: #fff;
             height: 16px;
             width: 16px;
-            //transform: scale(1.2);
         }
 
-
         &__textarea {
-            width: 168px;
+            width: @concept-textarea-width;
             @line-height: 18px;
             line-height: @line-height;
             font-size: 14px;
@@ -185,9 +191,9 @@
             padding: 6px;    
             background: none !important; // foundation.css overrides
             position: relative;
-            // top: 1px; // foundation.css overrides
             cursor: pointer;
             resize: none;
+            white-space: nowrap;
             z-index: 2;
             text-align: center;
             
@@ -197,28 +203,11 @@
             &:focus {
                 outline: none;
             }
+
+            &--sub {
+                color: #e6e6e6 !important;
+            }
         }
-    }
-
-    // .Concept:hover,
-    // .Concept:focus {
-    //     z-index: 3;
-    //     transform: scale(1.1) translateZ(0);
-    //     // box-shadow: 0 24px 32px rgba(0, 0, 0, 0.3);
-        
-    //     .Concept__button--top {
-    //         transform: translateY(0 - @concept-button-height);
-    //     }
-
-    //     .Concept__button--bottom {
-    //         transform: translateY(@concept-button-height);
-    //     }
-    // }
-
-    .Concept--line-mouse-down {
-        // .Concept__button--bottom {
-        //     transform: translateY(@concept-button-height);
-        // }
     }
 
     .Concept--temp-relationship-exists:not(.Concept--is-temp-relationship) {
@@ -230,7 +219,8 @@
             z-index: 1;
 
             .Concept__button--top,
-            .Concept__button--bottom {
+            .Concept__button--left,
+            .Concept__button--right {
                 transform: none;
             }
 
