--- a/src/components/RelationshipValueDisplay/RelationshipValueDisplay.css
+++ b/src/components/RelationshipValueDisplay/RelationshipValueDisplay.css
@@ -2,6 +2,12 @@
   position: absolute;
   z-index: 1;
 }
+.MentalMapper .relationship-value-display__text {
+  display: flex;
+  height: 25px;
+  justify-content: center;
+  align-items: center;
+}
 .MentalMapper .relationship-value-display__collapsed {
   cursor: pointer;
   color: #fff;
@@ -71,16 +77,20 @@
 .MentalMapper .relationship-value-display__expanded {
   overflow: hidden;
   border-radius: 6px;
-  width: 42px;
+  width: 80px;
   display: flex;
-  flex-flow: column;
-  border: 1px solid #000;
+  flex-flow: row;
   box-shadow: 0 6px 16px rgba(0, 0, 0, 0.35);
 }
 .MentalMapper .relationship-value-display__delete-icon {
   fill: #fff;
-  height: 14px;
-  width: 14px;
+  height: 16px;
+  width: 16px;
+}
+.MentalMapper .relationship-value-display__edit-icon {
+  fill: #fff;
+  height: 20px;
+  width: 20px;
 }
 .MentalMapper .relationship-value-display__delete {
   cursor: pointer;
@@ -97,9 +107,9 @@
   /* Chrome10-25,Safari5.1-6 */
   background: linear-gradient(to bottom, #333 0%, #333 15%, #000 85%, #000 100%);
   /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-  border-radius: 6px 6px 0 0;
+  border-radius: 6px 0 0 6px;
   width: 40px;
-  height: 24px;
+  height: 30px;
   padding-top: 2px;
   border: 1px solid #000;
 }
@@ -126,6 +136,52 @@
   box-shadow: inset 0 0 12px 2px rgba(0, 0, 0, 0.4);
 }
 .MentalMapper .relationship-value-display__delete svg {
+  filter: drop-shadow(0 0 1px #000);
+}
+.MentalMapper .relationship-value-display__edit {
+  cursor: pointer;
+  color: #fff;
+  outline: none;
+  text-shadow: 0 0 2px #000;
+  padding: 0;
+  box-shadow: none;
+  background: #000;
+  /* Old browsers */
+  background: -moz-linear-gradient(top, #000 0%, #000 15%, #333 85%, #333 100%);
+  /* FF3.6-15 */
+  background: -webkit-linear-gradient(top, #000 0%, #000 15%, #333 85%, #333 100%);
+  /* Chrome10-25,Safari5.1-6 */
+  background: linear-gradient(to bottom, #333 0%, #333 15%, #000 85%, #000 100%);
+  /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  border-radius: 0 6px 6px 0;
+  width: 40px;
+  height: 30px;
+  padding-top: 2px;
+  border: 1px solid #000;
+}
+.MentalMapper .relationship-value-display__edit:hover {
+  background: #657F14;
+  /* Old browsers */
+  background: -moz-linear-gradient(top, #657F14 0%, #657F14 15%, #A0CA24 85%, #A0CA24 100%);
+  /* FF3.6-15 */
+  background: -webkit-linear-gradient(top, #657F14 0%, #657F14 15%, #A0CA24 85%, #A0CA24 100%);
+  /* Chrome10-25,Safari5.1-6 */
+  background: linear-gradient(to bottom, #A0CA24 0%, #A0CA24 15%, #657F14 85%, #657F14 100%);
+  /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  border-color: #657F14;
+}
+.MentalMapper .relationship-value-display__edit:active {
+  background: #657F14;
+  /* Old browsers */
+  background: -moz-linear-gradient(top, #657F14 0%, #657F14 15%, #A0CA24 85%, #A0CA24 100%);
+  /* FF3.6-15 */
+  background: -webkit-linear-gradient(top, #657F14 0%, #657F14 15%, #A0CA24 85%, #A0CA24 100%);
+  /* Chrome10-25,Safari5.1-6 */
+  background: linear-gradient(to bottom, #A0CA24 0%, #A0CA24 15%, #657F14 85%, #657F14 100%);
+  /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  box-shadow: inset 0 0 12px 2px rgba(0, 0, 0, 0.4);
+}
+.MentalMapper .relationship-value-display__edit svg {
   filter: drop-shadow(0 0 1px #000);
 }
 .MentalMapper .relationship-value-display__slider-wrapper {
@@ -185,64 +241,14 @@
   z-index: 1;
 }
 .MentalMapper .relationship-value-display__input {
-  cursor: pointer;
-  text-shadow: 0 0 2px #000;
-  border: 1px solid #000;
-  padding: 0;
-  box-shadow: none;
-  /* Old browsers */
-  background: -moz-linear-gradient(top, #000 0%, #000 15%, #333 85%, #333 100%);
-  /* FF3.6-15 */
-  background: -webkit-linear-gradient(top, #000 0%, #000 15%, #333 85%, #333 100%);
-  /* Chrome10-25,Safari5.1-6 */
-  background: linear-gradient(to bottom, #333 0%, #333 15%, #000 85%, #000 100%);
-  /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-  font-weight: 300;
-  background: #000;
-  border: none;
-  color: #fff;
-  height: 22px;
-  font-size: 14px;
-  line-height: 22px;
+  border-radius: 6px;
+  padding: 5px;
+  width: 300px;
+  height: 36px;
   text-align: center;
   outline: none;
-  cursor: text;
-  margin: 0;
-}
-.MentalMapper .relationship-value-display__input:hover {
-  background: #657F14;
-  /* Old browsers */
-  background: -moz-linear-gradient(top, #657F14 0%, #657F14 15%, #A0CA24 85%, #A0CA24 100%);
-  /* FF3.6-15 */
-  background: -webkit-linear-gradient(top, #657F14 0%, #657F14 15%, #A0CA24 85%, #A0CA24 100%);
-  /* Chrome10-25,Safari5.1-6 */
-  background: linear-gradient(to bottom, #A0CA24 0%, #A0CA24 15%, #657F14 85%, #657F14 100%);
-  /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-  border-color: #657F14;
-}
-.MentalMapper .relationship-value-display__input:active {
-  background: #657F14;
-  /* Old browsers */
-  background: -moz-linear-gradient(top, #657F14 0%, #657F14 15%, #A0CA24 85%, #A0CA24 100%);
-  /* FF3.6-15 */
-  background: -webkit-linear-gradient(top, #657F14 0%, #657F14 15%, #A0CA24 85%, #A0CA24 100%);
-  /* Chrome10-25,Safari5.1-6 */
-  background: linear-gradient(to bottom, #A0CA24 0%, #A0CA24 15%, #657F14 85%, #657F14 100%);
-  /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-  box-shadow: inset 0 0 12px 2px rgba(0, 0, 0, 0.4);
-}
-.MentalMapper .relationship-value-display__input svg {
-  filter: drop-shadow(0 0 1px #000);
-}
-.MentalMapper .relationship-value-display__input:focus {
-  background: #657F14;
-  /* Old browsers */
-  background: -moz-linear-gradient(top, #657F14 0%, #657F14 15%, #A0CA24 85%, #A0CA24 100%);
-  /* FF3.6-15 */
-  background: -webkit-linear-gradient(top, #657F14 0%, #657F14 15%, #A0CA24 85%, #A0CA24 100%);
-  /* Chrome10-25,Safari5.1-6 */
-  background: linear-gradient(to bottom, #A0CA24 0%, #A0CA24 15%, #657F14 85%, #657F14 100%);
-  /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  overflow: hidden;
+  resize: none;
 }
 @keyframes MentalMapper-menu-pop-in-expand {
   0% {
