--- a/src/components/Concept/Concept.orig.css
+++ b/src/components/Concept/Concept.orig.css
@@ -1,8 +1,5 @@
-.MentalMapper .Concept-wrapper {
-  position: absolute;
-}
 .MentalMapper .Concept {
-  position: relative;
+  position: absolute;
   padding: 2px;
   padding-bottom: 0px;
   z-index: 1;
@@ -24,11 +21,8 @@
 .MentalMapper .Concept:focus .Concept__button--top {
   transform: translateY(-28px);
 }
-.MentalMapper .Concept:focus .Concept__button--left {
-  transform: translateX(-30px);
-}
-.MentalMapper .Concept:focus .Concept__button--right {
-  transform: translateX(30px);
+.MentalMapper .Concept:focus .Concept__button--bottom {
+  transform: translateY(28px);
 }
 .MentalMapper .Concept:hover {
   z-index: 3;
@@ -37,11 +31,8 @@
 .MentalMapper .Concept:hover .Concept__button--top {
   transform: translateY(-28px);
 }
-.MentalMapper .Concept:hover .Concept__button--left {
-  transform: translateX(-30px);
-}
-.MentalMapper .Concept:hover .Concept__button--right {
-  transform: translateX(30px);
+.MentalMapper .Concept:hover .Concept__button--bottom {
+  transform: translateY(28px);
 }
 .MentalMapper .Concept__bg {
   position: absolute;
@@ -50,11 +41,8 @@
   bottom: 0;
   left: 0;
   border-radius: 6px;
-  border: 1px solid #4c4c4c;
+  border: 1px solid #000;
   box-shadow: inset 0 0 0 2px #fff, 0 3px 8px rgba(0, 0, 0, 0.15);
-}
-.MentalMapper .Concept__bg--sub {
-  box-shadow: inset 0 0 0 2px #a9a9a9, 0 3px 8px rgba(0, 0, 0, 0.15) !important;
 }
 .MentalMapper .Concept__bg--focused.Concept__bg--group-0 {
   box-shadow: inset 0 0 4px 2px #d44c36;
@@ -134,16 +122,6 @@
   background: linear-gradient(to bottom, #fff 0%, #B2FFE5 100%);
   /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
 }
-.MentalMapper .Concept__bg--group-0-sub {
-  background: #666;
-  /* Old browsers */
-  background: -moz-linear-gradient(top, #666 0%, #a9a9a9 100%);
-  /* FF3.6-15 */
-  background: -webkit-linear-gradient(top, #666 0%, #a9a9a9 100%);
-  /* Chrome10-25,Safari5.1-6 */
-  background: linear-gradient(to bottom, #a9a9a9 0%, #666 100%);
-  /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-}
 .MentalMapper .Concept__button-wrapper {
   position: absolute;
   top: 0;
@@ -151,18 +129,14 @@
   bottom: 0;
   left: 0;
   display: flex;
-  justify-content: flex-start;
+  justify-content: center;
   z-index: -1;
 }
 .MentalMapper .Concept__button-wrapper--top {
   top: -14px;
-  left: 85px;
 }
-.MentalMapper .Concept__button-wrapper--left {
-  left: 0;
-}
-.MentalMapper .Concept__button-wrapper--right {
-  left: 170px;
+.MentalMapper .Concept__button-wrapper--bottom {
+  bottom: -14px;
 }
 .MentalMapper .Concept__button {
   color: #fff;
@@ -222,15 +196,10 @@
   top: 14px;
   border-radius: 6px 6px 0 0;
 }
-.MentalMapper .Concept__button--left {
-  align-self: flex-start;
-  top: 2px;
-  border-radius: 6px 0 0 6px;
-}
-.MentalMapper .Concept__button--right {
-  align-self: flex-start;
-  top: 2px;
-  border-radius: 0 6px 6px 0;
+.MentalMapper .Concept__button--bottom {
+  align-self: flex-end;
+  bottom: 14px;
+  border-radius: 0 0 6px 6px;
 }
 .MentalMapper .Concept__button:hover {
   background: #7E2E21;
@@ -242,12 +211,6 @@
   background: linear-gradient(to bottom, #D14A35 0%, #D14A35 15%, #7E2E21 85%, #7E2E21 100%);
   /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
   border-color: #7E2E21;
-}
-.MentalMapper .Concept__icon--add {
-  fill: #fff;
-  stroke: #fff;
-  height: 16px;
-  width: 16px;
 }
 .MentalMapper .Concept__icon--trash {
   fill: #fff;
@@ -262,7 +225,7 @@
   width: 16px;
 }
 .MentalMapper .Concept__textarea {
-  width: 200px;
+  width: 168px;
   line-height: 18px;
   font-size: 14px;
   min-height: 18px;
@@ -272,16 +235,12 @@
   position: relative;
   cursor: pointer;
   resize: none;
-  white-space: nowrap;
   z-index: 2;
   text-align: center;
   box-shadow: none !important;
 }
 .MentalMapper .Concept__textarea:focus {
   outline: none;
-}
-.MentalMapper .Concept__textarea--sub {
-  color: #fff !important;
 }
 .MentalMapper .Concept--temp-relationship-exists:not(.Concept--is-temp-relationship) > * {
   pointer-events: none;
@@ -290,8 +249,7 @@
   z-index: 1;
 }
 .MentalMapper .Concept--temp-relationship-exists:not(.Concept--is-temp-relationship):hover .Concept__button--top,
-.MentalMapper .Concept--temp-relationship-exists:not(.Concept--is-temp-relationship):hover .Concept__button--left,
-.MentalMapper .Concept--temp-relationship-exists:not(.Concept--is-temp-relationship):hover .Concept__button--right {
+.MentalMapper .Concept--temp-relationship-exists:not(.Concept--is-temp-relationship):hover .Concept__button--bottom {
   transform: none;
 }
 .MentalMapper .Concept--temp-relationship-exists:not(.Concept--is-temp-relationship):hover > .Concept__bg--group-0 {
