--- a/src/components/Concept/Concept.orig.less
+++ b/src/components/Concept/Concept.orig.less
@@ -4,12 +4,8 @@
 
     @concept-transform: scale(1.1) translateZ(0);
 
-    .Concept-wrapper {
-        position: absolute;
-    }
-    
     .Concept {
-        position: relative; // absolute;
+        position: absolute;
         padding: 2px;
         padding-bottom: 0px;
         z-index: 1;
@@ -24,6 +20,15 @@
 
         &--focused {
             z-index: 3;
+            // transform: @concept-transform;
+            
+            // .Concept__button--top {
+            //     transform: translateY(0 - @concept-button-height);
+            // }
+        
+            // .Concept__button--bottom {
+            //     transform: translateY(@concept-button-height);
+            // }
         }
 
         &:focus {
@@ -35,12 +40,8 @@
                 transform: translateY(0 - @concept-button-height);
             }
 
-            .Concept__button--left {
-                transform: translateX(0 - @concept-button-width);
-            }
-
-            .Concept__button--right {
-                transform: translateX(@concept-button-width);
+            .Concept__button--bottom {
+                transform: translateY(@concept-button-height);
             }
         }
 
@@ -53,12 +54,8 @@
                 transform: translateY(0 - @concept-button-height);
             }
 
-            .Concept__button--left {
-                transform: translateX(0 - @concept-button-width);
-            }
-
-            .Concept__button--right {
-                transform: translateX(@concept-button-width);
+            .Concept__button--bottom {
+                transform: translateY(@concept-button-height);
             }
         }
 
@@ -69,12 +66,8 @@
             bottom: 0;
             left: 0;
             border-radius: 6px;
-            border: 1px solid @gray;
+            border: 1px solid #000;
             box-shadow:inset 0 0 0 2px #fff, 0 3px 8px rgba(0, 0, 0, 0.15);
-
-            &--sub {
-                box-shadow: inset 0 0 0 2px @subconcept-0-sub-grad-light, 0 3px 8px rgba(0, 0, 0, 0.15) !important;
-            }
 
             &--focused {
                 &.Concept__bg--group-0 { .mixin-selected-control-bg(@concept-0-outline); }
@@ -91,8 +84,6 @@
             &--group-3 { .mixin-concept-bg(@concept-3-grad-light, @concept-3-grad-dark); }
             &--group-4 { .mixin-concept-bg(@concept-4-grad-light, @concept-4-grad-dark); }
             &--group-5 { .mixin-concept-bg(@concept-5-grad-light, @concept-5-grad-dark); }
-
-            &--group-0-sub { .mixin-concept-bg(@subconcept-0-sub-grad-light, @subconcept-0-sub-grad-dark); }
         }
 
         &__button-wrapper {
@@ -103,32 +94,30 @@
             left: 0;
             // background-color: rgba(255, 0, 0, 0.3);
             display: flex;
-            justify-content: flex-start;
+            justify-content: center;
             z-index: -1;
             // pointer-events: none;
 
             &--top {
                 top: 0 - @concept-button-height / 2;
-                left: (@concept-textarea-width - @concept-button-width) / 2;
                 // background-color: rgba(255, 0, 0, 0.3);
             }
 
-            &--left {
-                left: 0;
-            }
-
-            &--right {
-                left: @concept-textarea-width - @concept-button-width;
+            &--bottom {
+                bottom: 0 - @concept-button-height / 2;
                 // background-color: rgba(0, 255, 0, 0.3);    
             }
         }
 
         &__button {
             .mm-button();
+            //.mixin-button-bg(@button-grad-light, @button-grad-dark);
+            // border: 1px solid @button-grad-dark;
             height: @concept-button-height;
             width: @concept-button-width;
             position: relative;
             transition: transform 300ms ease;
+            // border: 2px solid #000;
             cursor: pointer;
             z-index: 1;
             display: flex;
@@ -136,6 +125,10 @@
             align-items: center;
             outline: none;
 
+            &:focus {
+                // box-shadow: 0 0 1px 3px @button-grad-hover-light, inset 0 0 2px 1px @button-grad-hover-light;
+            }
+            
             > * {
                 pointer-events: none;
             }
@@ -144,18 +137,19 @@
                 align-self: flex-start;
                 top: @concept-button-height / 2; 
                 border-radius: @concept-button-border-radius @concept-button-border-radius 0 0;
+                
+                // &:focus {
+                //     transform: translateY(0 - @concept-button-height);
+                // }
             }
 
-            &--left {
-                align-self: flex-start;
-                top: 2px;
-                border-radius: @concept-button-border-radius 0 0 @concept-button-border-radius;
-            }
-
-            &--right {
-                align-self: flex-start;
-                top: 2px;
-                border-radius: 0 @concept-button-border-radius @concept-button-border-radius 0;
+            &--bottom {
+                align-self: flex-end;
+                bottom: @concept-button-height / 2;
+                border-radius: 0 0 @concept-button-border-radius @concept-button-border-radius;
+                // &:focus {
+                //     transform: translateY(@concept-button-height);
+                // }
             }
 
             &:hover {
@@ -164,18 +158,12 @@
             }
         }
 
-        &__icon--add {
-            fill: #fff;
-            stroke: #fff;
-            height: 16px;
-            width: 16px;
-        }
-
         &__icon--trash {
             fill: #fff;
             stroke: #fff;
             height: 16px;
             width: 16px;
+            //transform: scale(1.2);
         }
 
         &__icon--line {
@@ -183,10 +171,12 @@
             stroke: #fff;
             height: 16px;
             width: 16px;
+            //transform: scale(1.2);
         }
 
+
         &__textarea {
-            width: @concept-textarea-width;
+            width: 168px;
             @line-height: 18px;
             line-height: @line-height;
             font-size: 14px;
@@ -195,9 +185,9 @@
             padding: 6px;    
             background: none !important; // foundation.css overrides
             position: relative;
+            // top: 1px; // foundation.css overrides
             cursor: pointer;
             resize: none;
-            white-space: nowrap;
             z-index: 2;
             text-align: center;
             
@@ -207,12 +197,28 @@
             &:focus {
                 outline: none;
             }
-
-            &--sub {
-                // color: @sub-concept-color !important; // #e6e6e6 !important
-                color: @sub-concept-color !important; // #e6e6e6 !important
-            }
         }
+    }
+
+    // .Concept:hover,
+    // .Concept:focus {
+    //     z-index: 3;
+    //     transform: scale(1.1) translateZ(0);
+    //     // box-shadow: 0 24px 32px rgba(0, 0, 0, 0.3);
+        
+    //     .Concept__button--top {
+    //         transform: translateY(0 - @concept-button-height);
+    //     }
+
+    //     .Concept__button--bottom {
+    //         transform: translateY(@concept-button-height);
+    //     }
+    // }
+
+    .Concept--line-mouse-down {
+        // .Concept__button--bottom {
+        //     transform: translateY(@concept-button-height);
+        // }
     }
 
     .Concept--temp-relationship-exists:not(.Concept--is-temp-relationship) {
@@ -224,8 +230,7 @@
             z-index: 1;
 
             .Concept__button--top,
-            .Concept__button--left,
-            .Concept__button--right {
+            .Concept__button--bottom {
                 transform: none;
             }
 
