--- a/src/components/Map/Map.less
+++ b/src/components/Map/Map.less
@@ -27,7 +27,7 @@
 
         textarea::placeholder,
         input::placeholder {
-            color: #9a9b9d !important;
+            color: #9a9b9d;
         }
     }
 
