--- a/src/shared.less
+++ b/src/shared.less
@@ -1,9 +1,11 @@
+@darkenPercentage: 60%;
 @text-shadow: 0 1px 1px rgba(0, 0, 0, 0.95);
 @text-shadow-selected-control: 0 1px 3px rgba(0, 0, 0, 1);
 @control-panel-header-bg: #666; // #4a4b4d;
 @controls-transition-duration: 250ms;
 @concept-shadow: 0 3px 8px rgba(0, 0, 0, 0.15);
-@placeholder-color: #9b9c9d;
+@placeholder-color:#9b9c9d;
+@placeholder-sub-color: #bdbdbd;
 
 @relationship-color-positive: #0351A6;
 @relationship-color-negative: #E57429; //#BF5513;
@@ -19,36 +21,38 @@
 @concept-0-grad-light: #fff;
 @concept-0-grad-dark: #e6e6e6;
 @concept-0-group-bg: #e6e6e6;
-@subconcept-0-group-bg: #aaa;
-@subconcept-0-grad-light: #e6e6e6;
-@subconcept-0-grad-dark: #aaa;
-@subconcept-0-sub-grad-light: #a9a9a9;
-@subconcept-0-sub-grad-dark: #666;
+@concept-0-sub-grad-light: #a9a9a9;
+@concept-0-sub-grad-dark: #666;
 
 @concept-1-outline: #E57429;
 @concept-1-grad-light: #fff;
 @concept-1-grad-dark: #FFD0B2;
 @concept-1-group-bg: #FED0B4;
+@concept-1-sub-grad-dark: #7C655C;
 
 @concept-2-outline: #2971E5;
 @concept-2-grad-light: #fff;
 @concept-2-grad-dark: #B2CFFF;
 @concept-2-group-bg: #B3D0FD;
+@concept-2-sub-grad-dark: #5C647E;
 
 @concept-3-outline: #E5E529;
 @concept-3-grad-light: #fff;
 @concept-3-grad-dark: #FFFFB2;
 @concept-3-group-bg: #FFFEB6;
+@concept-3-sub-grad-dark: #80805E;
 
 @concept-4-outline: #E529E5;
 @concept-4-grad-light: #fff;
 @concept-4-grad-dark: #FFB2FF;
 @concept-4-group-bg: #FEB4FD;
+@concept-4-sub-grad-dark: #7A5C7E;
 
 @concept-5-outline: #14D192;
 @concept-5-grad-light: #fff;
 @concept-5-grad-dark: #B2FFE5;
 @concept-5-group-bg: #B4FEE5;
+@concept-5-sub-grad-dark:#628074;
 
 @button-grad-dark: #666; // #000;
 @button-grad-light: #7f7f7f; //#333;
@@ -61,6 +65,7 @@
 @concept-button-border-radius: 6px;
 
 @excluded-opacity: 0.15;
+@shadow-core: 0 3px 8px rgba(0, 0, 0, 0.15);
 
 .mixin-selected-control(@grad-light; @grad-dark) {
     background: @grad-light; /* Old browsers */
@@ -69,14 +74,14 @@
     background: linear-gradient(to bottom, @grad-dark 0%, @grad-light 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
 }
 
-.mixin-concept-bg(@light;@dark) {
+.mixin-concept-bg(@light; @dark) {
     background: @dark; /* Old browsers */
     background: -moz-linear-gradient(top, @dark 0%, @light 100%); /* FF3.6-15 */
     background: -webkit-linear-gradient(top, @dark 0%, @light 100%); /* Chrome10-25,Safari5.1-6 */
     background: linear-gradient(to bottom, @light 0%, @dark 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
 }
 
-.mixin-button-bg(@light;@dark) {
+.mixin-button-bg(@light; @dark) {
     @bottom: 15%; // 25%;
     @top: 85%; // 75%;
     background: @dark; /* Old browsers */
@@ -86,7 +91,12 @@
 }
 
 .mixin-selected-control-bg(@color) {
-    box-shadow: inset 0 0 4px 2px @color;
+    box-shadow: inset 0 0 0 3px @color, @shadow-core;
+}
+
+.mixin-relationship-selected-control-bg(@color) {
+    box-shadow: @shadow-core, inset 0 0 0 1px @color;
+    border-color: @color;
 }
 
 .mm-button() {
