- added save dialog

--- a/src/components/Controls/Controls.less
+++ b/src/components/Controls/Controls.less
@@ -17,7 +17,7 @@
             transform: rotateZ(270deg) scale(10);
             position: absolute;
             bottom: 0;
-            left: 40px;
+            left: 0;
             transform-origin: top left;
             color: #ececec;
             z-index: 0;
