--- a/src/App.less
+++ b/src/App.less
@@ -1,5 +1,11 @@
 * {
     box-sizing: border-box;
+    font-family: 'Inter', -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+}
+
+html, body {
+    font-size: 16px;
+    line-height: 24px;
 }
 
 .MentalMapper {
