--- a/src/shared.less
+++ b/src/shared.less
@@ -66,6 +66,8 @@
 
 @excluded-opacity: 0.15;
 @shadow-core: 0 3px 8px rgba(0, 0, 0, 0.15);
+@ease-out-back: cubic-bezier(0.34, 1.56, 0.64, 1);
+@ease-in-back: cubic-bezier(0.36, 0, 0.66, -0.56);
 
 .mixin-selected-control(@grad-light; @grad-dark) {
     background: @grad-light; /* Old browsers */
