--- a/src/components/Map/Map.css
+++ b/src/components/Map/Map.css
@@ -174,6 +174,7 @@
   filter: drop-shadow(0 0 1px #000);
 }
 .MentalMapper .map-controls__load > span {
+  pointer-events: none;
   display: flex;
   align-items: center;
   justify-content: center;
