--- a/src/components/Map/Map.less
+++ b/src/components/Map/Map.less
@@ -72,6 +72,7 @@
             
 
             > span {
+                pointer-events: none;
                 display: flex;
                 align-items: center;
                 justify-content: center;
