--- a/src/components/Map/SaveLoadModal.css
+++ b/src/components/Map/SaveLoadModal.css
@@ -8,7 +8,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  z-index: 1;
+  z-index: 5;
 }
 .SaveLoadModal__skrim {
   position: absolute;
@@ -16,6 +16,7 @@
   right: 0;
   bottom: 0;
   left: 0;
+  z-index: 4;
   background-color: rgba(0, 0, 0, 0.4);
 }
 .SaveLoadModal__dialog {
@@ -58,25 +59,30 @@
   transform: scale(0.5);
   opacity: 0;
 }
-.SaveLoadModal h2 {
+.SaveContent,
+.LoadContent {
+  color: #fff;
+}
+.SaveContent h2,
+.LoadContent h2 {
   color: #fff;
   margin-bottom: 8px;
   margin-top: -8px;
 }
-.SaveContent {
-  color: #fff;
-}
-.SaveContent__input-row {
+.SaveContent__input-row,
+.LoadContent__input-row {
   width: 100%;
   margin-top: 24px;
 }
-.SaveContent__input-row-title {
+.SaveContent__input-row-title,
+.LoadContent__input-row-title {
   font-weight: 300;
   font-size: 18px;
   color: #ccc;
   margin-bottom: 4px;
 }
-.SaveContent__input {
+.SaveContent__input,
+.LoadContent__input {
   width: 100%;
   border-radius: 2px;
   padding: 8px;
@@ -86,15 +92,18 @@
   font-size: 16px;
   flex-grow: 1;
 }
-.SaveContent__input:focus {
+.SaveContent__input:focus,
+.LoadContent__input:focus {
   outline: none;
 }
-.SaveContent__control-row {
+.SaveContent__control-row,
+.LoadContent__control-row {
   margin-top: 24px;
   display: flex;
   justify-content: flex-end;
 }
-.SaveContent__control-button {
+.SaveContent__control-button,
+.LoadContent__control-button {
   padding: 12px 16px;
   border-radius: 6px;
   background: #666;
@@ -107,13 +116,16 @@
   /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
   border: solid 1px #121212;
 }
-.SaveContent__control-button > span {
+.SaveContent__control-button > span,
+.LoadContent__control-button > span {
   text-shadow: 0 1px 2px rgba(0, 0, 0, 0.5);
 }
-.SaveContent__control-button:first-child {
+.SaveContent__control-button:first-child,
+.LoadContent__control-button:first-child {
   margin-right: 24px;
 }
-.SaveContent__control-button:hover {
+.SaveContent__control-button:hover,
+.LoadContent__control-button:hover {
   background: #a9a9a9;
   /* Old browsers */
   background: -moz-linear-gradient(top, #a9a9a9 0%, #a9a9a9 100%);
@@ -123,7 +135,8 @@
   background: linear-gradient(to bottom, #a9a9a9 0%, #a9a9a9 100%);
   /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
 }
-.SaveContent__control-button:active {
+.SaveContent__control-button:active,
+.LoadContent__control-button:active {
   background: #666;
   /* Old browsers */
   background: -moz-linear-gradient(top, #666 0%, #666 100%);
@@ -133,7 +146,8 @@
   background: linear-gradient(to bottom, #666 0%, #666 100%);
   /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
 }
-.SaveContent__control-button:focus {
+.SaveContent__control-button:focus,
+.LoadContent__control-button:focus {
   outline: none;
 }
 .dog__icon {
